k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $SERVICE_NAME
  labels:
    app: $SERVICE_NAME
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: $SERVICE_NAME
  template:
    metadata:
      name: $SERVICE_NAME
      labels:
        app: $SERVICE_NAME
        tier: web
    spec:
      containers:
        - name: $SERVICE_NAME
          image: $BUILD_IMAGE
          imagePullPolicy: Always
          ports:
          - name: web
            containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 5
